[package]
name    = "tcv"
version = "0.1.1"
edition = "2021"
description = "A temperature unit converter"
authors = ["Julio Gardona <jcbritobr@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jgardona/tcv"
license = "MIT"
keywords = ["converter", "temperature", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
